# GildedRose-Refactoring-Kata

python/: Makefile  README.md  pyproject.toml  test_gilded_rose.py  test_item_class.py
python/kata/: gilded_rose.py
python/kata/goods/: aged_brie_good.py  any_good.py  backstage_passes_good.py  conjured_good.py  good_interface.py  goods.py  sulfuras_good.py
python/tests/: conftest.py  test_gilded_rose.py  test_gilded_rose_regression.py  test_item_class.py  texttest_fixture.py
python/tests/gilded_rose/: test_aged_brie_flow.py  test_backstage_passes_flow.py  test_conjured_glow.py  test_sulfuras_flow.py
python/tests/goods/: test_aged_brie_good.py  test_any_good.py  test_backstage_passes_good.py  test_conjured_good.py  test_sulfuras_good.py
