[tool.poetry]
name = "kata"
version = "0.1.0"
description = "Gilded Rose Kata Challenge"
authors = ["Lays Rodrigues <laysrodriguessilva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
pytest = "^6.2.4"
black = "^21.6b0"
pytest-cov = "^2.12.1"
isort = "^5.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov=kata"
testpaths = ["tests"]
